--- a/tutorial-author/pom.xml
+++ b/tutorial-author/pom.xml
@@ -27,7 +27,8 @@
         <url/>
     </scm>
     <properties>
-        <java.version>17</java.version>
+        <java.version>19</java.version>
+        <spring-cloud.version>2023.0.4</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -52,6 +53,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>3.1.1</version>
@@ -68,6 +74,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
