--- a/tutorial-game/src/main/resources/application.properties
+++ b/tutorial-game/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+spring.sql.init.mode=never
 spring.h2.console.enabled=true
 #Eureka
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
