Implemento el microservicio customer, lo configuro para que se registre en eureka y redirecciono al api gateway

--- a/tutorial-gateway/src/main/resources/application.yml
+++ b/tutorial-gateway/src/main/resources/application.yml
@@ -30,3 +30,7 @@ spring:
           uri: lb://SPRING-CLOUD-EUREKA-CLIENT-GAME
           predicates:
             - Path=/game/**
+        - id: customer
+          uri: lb://SPRING-CLOUD-EUREKA-CLIENT-CUSTOMER
+          predicates:
+            - Path=/customer/**
