--- a/tutorial-customer/pom.xml
+++ b/tutorial-customer/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ccsw</groupId>
-    <artifactId>tutorial-game</artifactId>
+    <artifactId>tutorial-customer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tutorial-game</name>
+    <name>tutorial-customer</name>
     <description>Tutorial project for Spring Cloud</description>
     <url/>
     <licenses>
@@ -58,8 +58,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.1</version>
         </dependency>
 
         <dependency>
