Implemento el microservicio loan, lo configuro para que se registre en eureka y redirecciono al api gateway

--- a/tutorial-gateway/src/main/resources/application.yml
+++ b/tutorial-gateway/src/main/resources/application.yml
@@ -34,3 +34,7 @@ spring:
           uri: lb://SPRING-CLOUD-EUREKA-CLIENT-CUSTOMER
           predicates:
             - Path=/customer/**
+        - id: loan
+          uri: lb://SPRING-CLOUD-EUREKA-CLIENT-LOAN
+          predicates:
+            - Path=/loan/**
